# llm_resources

deeplearningai/: README.md
deeplearningai/diffusion_models/2. Sampling/: notes.ipynb  (+1 more)
deeplearningai_building_systems_with_chatgpt_api/1. L1 Language Models, the Chat Format and Tokens/: L1_student.ipynb  notes.ipynb
deeplearningai_building_systems_with_chatgpt_api/2. Classification/: notes.ipynb
deeplearningai_building_systems_with_chatgpt_api/3. Moderation/: notes.ipynb
deeplearningai_building_systems_with_chatgpt_api/5. Chaining prompts/: notes.ipynb
deeplearningai_building_systems_with_chatgpt_api/7. Putting it all together/: putting_together.ipynb
deeplearningai_building_systems_with_chatgpt_api/8. Evaluating your prompt quality/: prompt_evaluation.ipynb
deeplearningai_building_systems_with_chatgpt_api/key/: key.py
free_code_camp/end_to_end_langchain_projs/: README.md
free_code_camp/langchain_crash_course/: notes.ipynb
free_code_camp/llm_development/: main.py  pyproject.toml
free_code_camp/llm_development/notes/: 1. LLM Basics.ipynb  2. VectorDB.ipynb
free_code_camp/llm_development/references/: 5. autogpt.ipynb  Youtube_search.py
free_code_camp/llm_fine_tuning/: Fine_Tuning_LLm_Models.ipynb  README.md  notes.ipynb  pyproject.toml
free_code_camp/llm_from_scratch/: README.md  pyproject.toml
free_code_camp/llm_wow/: README.md
free_code_camp/openai_assistants_api/: README.md
free_code_camp/rag_from_scratch/: README.md  langgraph.md  pyproject.toml  rag_from_scratch_10_and_11.ipynb  rag_from_scratch_12_to_14.ipynb  rag_from_scratch_15_to_18.ipynb  rag_from_scratch_5_to_9.ipynb
free_code_camp/rag_from_scratch/.ragatouille/colbert/indexes/Miyazaki-123/: 0.codes.pt  0.metadata.json  0.residuals.pt  avg_residual.pt  buckets.pt  centroids.pt  collection.json  doclens.0.json  ivf.pid.pt  metadata.json  pid_docid_map.json  plan.json
llm_design_patterns_notes/: design patterns.ipynb
(+42 files in other folders)
