[tool.poetry]
name = "llm-fine-tuning"
version = "0.1.0"
description = ""
authors = ["yongjian.tek <yongjian.tek@grabtaxi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"
accelerate = "^0.31.0"
peft = "^0.11.1"
bitsandbytes = "0.42.0"
transformers = "^4.41.2"
trl = "^0.9.4"
setuptools = "^70.0.0"
datasets = "^2.20.0"
gradientai = "^1.13.0"
mistral = "^18.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
